--- a/VSWork/xnh_new_2/ApiMonitor/pages/menu.html
+++ b/VSWork/xnh_new_2/ApiMonitor/pages/menu.html
@@ -12,6 +12,7 @@
         <!-- Bootstrap Admin Theme -->
         <link rel="stylesheet" media="screen" href="css/bootstrap-admin-theme.css">
         <link rel="stylesheet" media="screen" href="css/bootstrap-admin-theme-change-size.css">
+        <link rel="stylesheet" media="screen" href="css/maskStyle.css">
 
         <!-- Custom styles -->
         <style type="text/css">
