--- a/VSWork/xnh_new_2/ApiMonitor/pages/mzbc.html
+++ b/VSWork/xnh_new_2/ApiMonitor/pages/mzbc.html
@@ -515,6 +515,7 @@
     <script type="text/javascript" src="calendar/datepicker.min.js"></script>
     <script type="text/javascript" src="calendar/datepicker.zh-CN.js"></script>
     <script type="text/javascript" src="calendar/js/main.js"></script>
+    <script type="text/javascript" src="js/jquery.base64.js"></script>
 
     <script type="text/javascript">
 
