--- a/VSWork/xnh_new_2/ApiMonitor/pages/mzbc.html
+++ b/VSWork/xnh_new_2/ApiMonitor/pages/mzbc.html
@@ -408,7 +408,182 @@
                         <option value="9">其他</option>
                     </select>
                 </td>
-                <td style="padding-left:30px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                <td style="padding-left:30px;">
+                    当前科室：
+                    <select id="dqks" name="">
+                        <option value="">请选择</option>
+                        <option value="01">预防保健科</option>
+                        <option value="02">全科医疗科</option>
+                        <option value="03">内科</option>
+                        <option value="0301">呼吸内科专业</option>
+                        <option value="0302">消化内科专业</option>
+                        <option value="0303">神经内科专业</option>
+                        <option value="0304">心血管内科专业</option>
+                        <option value="0305">血液内科专业</option>
+                        <option value="0306">肾病学专业</option>
+                        <option value="0307">内分泌专业</option>
+                        <option value="0308">免疫学专业</option>
+                        <option value="0309">变态反应专业</option>
+                        <option value="0310">老年病专业</option>
+                        <option value="0399">其他</option>
+                        <option value="0312">重症监护(内科)</option>
+                        <option value="04">外科</option>
+                        <option value="0401">普通外科专业</option>
+                        <option value="0402">神经外科专业</option>
+                        <option value="0403">骨科专业</option>
+                        <option value="0404">泌尿外科专业</option>
+                        <option value="0405">胸外科专业</option>
+                        <option value="0406">心脏大血管外科专业</option>
+                        <option value="0407">烧伤科专业</option>
+                        <option value="0408">整形外科专业</option>
+                        <option value="0499">其他</option>
+                        <option value="0410">重症监护(外科)</option>
+                        <option value="05">妇产科</option>
+                        <option value="0501">妇科专业</option>
+                        <option value="0502">产科专业</option>
+                        <option value="0503">计划生育专业</option>
+                        <option value="0504">优生学专业</option>
+                        <option value="0505">生殖健康与不孕症专业</option>
+                        <option value="0599">其他</option>
+                        <option value="06">妇女保健科</option>
+                        <option value="0601">青春期保健专业</option>
+                        <option value="0602">围产期保健专业</option>
+                        <option value="0603">更年期保健专业</option>
+                        <option value="0604">妇女心理卫生专业</option>
+                        <option value="0605">妇女营养专业</option>
+                        <option value="0699">其他</option>
+                        <option value="07">儿科</option>
+                        <option value="0701">新生儿专业</option>
+                        <option value="0702">小儿传染病专业</option>
+                        <option value="0703">小儿消化专业</option>
+                        <option value="0704">小儿呼吸专业</option>
+                        <option value="0705">小儿心脏病专业</option>
+                        <option value="0706">小儿肾病专业</option>
+                        <option value="0707">小儿血液病专业</option>
+                        <option value="0708">小儿神经病学专业</option>
+                        <option value="0709">小儿内分泌专业</option>
+                        <option value="0710">小儿遗传病专业</option>
+                        <option value="0711">小儿免疫专业</option>
+                        <option value="0799">其他</option>
+                        <option value="08">小儿外科</option>
+                        <option value="0801">小儿普通外科专业</option>
+                        <option value="0802">小儿骨科专业</option>
+                        <option value="0803">小儿泌尿外科专业</option>
+                        <option value="0804">小儿胸心外科专业</option>
+                        <option value="0805">小儿神经外科专业</option>
+                        <option value="0899">其他</option>
+                        <option value="09">儿童保健科</option>
+                        <option value="0901">儿童生长发育专业</option>
+                        <option value="0902">儿童营养专业</option>
+                        <option value="0903">儿童心理卫生专业</option>
+                        <option value="0904">儿童五官保健专业</option>
+                        <option value="0905">儿童康复专业</option>
+                        <option value="0999">其他</option>
+                        <option value="10">眼科</option>
+                        <option value="11">耳鼻咽喉科</option>
+                        <option value="1101">耳科专业</option>
+                        <option value="1102">鼻科专业</option>
+                        <option value="1103">咽喉科专业</option>
+                        <option value="1199">其他</option>
+                        <option value="12">口腔科</option>
+                        <option value="1201">口腔内科专业</option>
+                        <option value="1202">口腔颌面外科专业</option>
+                        <option value="1203">正畸专业</option>
+                        <option value="1204">口腔修复专业</option>
+                        <option value="1205">口腔预防保健专业</option>
+                        <option value="1299">其他</option>
+                        <option value="13">皮肤科</option>
+                        <option value="1301">皮肤病专业</option>
+                        <option value="1302">性传播疾病专业</option>
+                        <option value="1399">其他</option>
+                        <option value="14">医疗美容科</option>
+                        <option value="15">精神科</option>
+                        <option value="1501">精神病专业</option>
+                        <option value="1502">精神卫生专业</option>
+                        <option value="1503">药物依赖专业</option>
+                        <option value="1504">精神康复专业</option>
+                        <option value="1505">社区防治专业</option>
+                        <option value="1506">临床心理专业</option>
+                        <option value="1507">司法精神专业</option>
+                        <option value="1599">其他</option>
+                        <option value="16">传染科</option>
+                        <option value="1601">肠道传染病专业</option>
+                        <option value="1602">呼吸道传染病专业</option>
+                        <option value="1603">肝炎专业</option>
+                        <option value="1604">虫媒传染病专业</option>
+                        <option value="1605">动物源性传染病专业</option>
+                        <option value="1606">蠕虫病专业</option>
+                        <option value="1699">其它</option>
+                        <option value="17">结核病科</option>
+                        <option value="18">地方病科</option>
+                        <option value="19">肿瘤科</option>
+                        <option value="20">急诊医学科</option>
+                        <option value="2001">重症监护(急诊)</option>
+                        <option value="21">康复医学科</option>
+                        <option value="22">运动医学科</option>
+                        <option value="23">职业病科</option>
+                        <option value="2301">职业中毒专业</option>
+                        <option value="2302">尘肺专业</option>
+                        <option value="2303">放射病专业</option>
+                        <option value="2304">物理因素损伤专业</option>
+                        <option value="2305">职业健康监护专业</option>
+                        <option value="2399">其他</option>
+                        <option value="24">临终关怀科</option>
+                        <option value="25">特种医学与军事医学科</option>
+                        <option value="26">麻醉科</option>
+                        <option value="30">医学检验科</option>
+                        <option value="3001">临床体液、血液专业</option>
+                        <option value="3002">临床微生物学专业</option>
+                        <option value="3003">临床生化检验专业</option>
+                        <option value="3004">临床免疫、血清学专业</option>
+                        <option value="3099">其他</option>
+                        <option value="31">病理科</option>
+                        <option value="32">医学影像科</option>
+                        <option value="3201">X线诊断专业</option>
+                        <option value="3202">CT诊断专业</option>
+                        <option value="3203">磁共振成像诊断专业</option>
+                        <option value="3204">核医学专业</option>
+                        <option value="3205">超声诊断专业</option>
+                        <option value="3206">心电诊断专业</option>
+                        <option value="3207">脑电及脑血流图诊断专业</option>
+                        <option value="3208">神经肌肉电图专业</option>
+                        <option value="3209">介入放射学专业</option>
+                        <option value="3210">放射治疗专业</option>
+                        <option value="3299">其他</option>
+                        <option value="50">中医科</option>
+                        <option value="5001">内科专业</option>
+                        <option value="5002">外科专业</option>
+                        <option value="5003">妇产科专业</option>
+                        <option value="5004">儿科专业</option>
+                        <option value="5005">皮肤科专业</option>
+                        <option value="5006">眼科专业</option>
+                        <option value="5007">耳鼻咽喉科专业</option>
+                        <option value="5008">口腔科专业</option>
+                        <option value="5009">肿瘤科专业</option>
+                        <option value="5010">骨伤科专业</option>
+                        <option value="5011">肛肠科专业</option>
+                        <option value="5012">老年病科专业</option>
+                        <option value="5013">针灸科专业</option>
+                        <option value="5014">推拿科专业</option>
+                        <option value="5015">康复医学专业</option>
+                        <option value="5016">急诊科专业</option>
+                        <option value="5017">预防保健科专业</option>
+                        <option value="5099">其他</option>
+                        <option value="51">民族医学科</option>
+                        <option value="5101">维吾尔医学</option>
+                        <option value="5102">藏医学</option>
+                        <option value="5103">蒙医学</option>
+                        <option value="5104">彝医学</option>
+                        <option value="5105">傣医学</option>
+                        <option value="5199">其他</option>
+                        <option value="52">中西医结合科</option>
+                        <option value="61">重症监护室(综合)</option>
+                        <option value="79">其它</option>
+                        <option value="99">管理科室</option>
+                        <option value="9901">感染(管理)科</option>
+                    </select>
+
+                </td>
                 <td style="padding-left:30px;">
                     入院状态：
                     <select id="ryzt" name="">
@@ -548,7 +723,7 @@
             //ssMap["D502_09"] = 数据库取; //药品数量字符串(用分号分隔)
             //ssMap["D502_08"] = 数据库取; //药品单价字符串(用分号分隔)
             ssMap["D502_10"] = ""; //药品比例字符串(用分号分隔) 暂时传空
-            //ssMap["D501_13"] = 数据库取; //接诊科室(前台选择)对应S201-03.xls 
+            ssMap["D501_13"] = $("#dqks").val(); //接诊科室(前台选择)对应S201-03.xls 
             //ssMap["D501_14"] = 数据库取; //经治医生
             ssMap["D501_15"] = $("#ryzt").val(); //来院状态(前台选择)对应S301-02.xls
             ssMap["D503_03"] = "NULL"; //总费用 (试算的时候传’NULL’)  收费时传(O_TOTAL_COSTS：总费用)
@@ -583,6 +758,13 @@
                 return;
             }
 
+            //当前科室
+            var dqks = $("#dqks").val();
+            if (dqks == "") {
+                alert("请选择当前科室");
+                return;
+            }
+
             var info = "";
             var selectedRows = "";
             for (var i = 0; i < checked.length; i++) {
@@ -605,11 +787,19 @@
             } else {
                 return;
             }
-
+            //诊断只需疾病编码
+            var jbbm_code = $("#jbbm").val();
+            if (jbbm_code != "" && jbbm_code != null) {
+                var tmpCode = jbbm_code.split('|');
+                if (tmpCode != null && tmpCode.length > 0) {
+                    jbbm_code = tmpCode[0];
+                }
+            }
+            
             var USER_ID = getCookie("USER_ID");
             var pMap = {};
             pMap["USER_ID"] = USER_ID;
-            pMap["DIAGNOSIS_CODE"] = $("#jbbm").val(); //疾病代码
+            pMap["DIAGNOSIS_CODE"] = jbbm_code; //疾病代码
             pMap["PARAM"] = getParam(); //试算的参数
             pMap["ROWS"] = selectedRows; //选中的多个记录
             var pJson = map2Json(pMap);
@@ -623,7 +813,12 @@
                 success: function (data) {
                     //返回的数据用data.d获取内容
                     var retVal = data.d;
-                    alert(retVal);
+                    var retJson = getJsonObj(retVal);
+                    if (retJson.flag == '0') {
+                        var json = retJson.msg;
+                    } else {
+                        alert(retJson.msg);
+                    }
 
                 },
                 error: function (XMLHttpRequest, textStatus, errorThrown) {
@@ -632,6 +827,20 @@
                 }
             });
         }
+
+        //绑定试算信息
+        function bindTryCalVal(param) {
+            //retDict["TOTAL_COSTS"];//总费用
+            //retDict["ZF_COSTS"];//自费费用
+            //retDict["TOTAL_CHAGE"];//合理费用
+            //retDict["D506_23"];//实际补偿金额
+            //retDict["D506_18"];//核算补偿金额[实际补偿合计额)
+            //retDict["BEGINPAY"];//本次起伏线
+            //retDict["SCALE"];//报销比例
+            //retDict["HEAV_REDEEM_SUM"];//大病支付额
+            //retDict["REDEEM_TOTAL"];//单次补偿合计
+        }
+
         //患者姓名回车查询
         $('#hzxm').bind('keydown', function (event) {
             if (event.keyCode == "13") {
